--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -168,7 +168,6 @@
                             <!-- End "I'm proficient in..." Skills Tab -->
                         </div>
 
-
                         <!-- Begin "Looking for..." desired skills tab -->
                         <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
                             aria-labelledby="desiredSkills-tab">
@@ -291,6 +290,8 @@
                     <img class="profile-parts" alt="footer-img" src="/static/img/footer.png" />
                 </div>
 
+                <!-- Github field. -->
+                
                 <div class="col-12">
                     <label class="contact" for="profile-contact">
                         Github
