--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -19,21 +19,23 @@
             </div>
         </div>
 
-        <div class="jumbotron profile-jumbo">
+        <!-- BEGIN FORM -->
 
-            <form id="profile-form" method="POST">
+        <form id="profile-form" method="POST">
 
+            <!-- Begin Header jumbotron -->
 
+            <div class="jumbotron profile-jumbo">
+
+                <!-- Header image -->
 
                 <div class="row">
-
                     <div class="col-12 justify-content-center">
-
                         <img class="profile-parts" src="/static/img/header.png" />
                     </div>
                     <div class="col-12 col-md-6">
 
-
+                        <!-- Short Description field. -->
 
                         <label class="profile-label" for="profile-shortDesc">
                             Short Description
@@ -42,33 +44,30 @@
                             maxlength="200" placeholder="Keep it short and sweet!" value required>
                     </div>
 
-
+                    <!-- Image URL field. -->
 
                     <div class="col-12 col-md-6">
-
-
                         <label class="profile-label" for="profile-img">
                             Profile Image.
                         </label>
                         <small>Please enter the URL of your profile image</small>
                         <input id="profileImg" name="imgURL" class="form-control" type="text" maxlength="200"
                             placeholder="http://www.picturehost.com/mypic.jpg" value required>
-
                     </div>
                 </div>
 
-
+                <!-- District dropdown. -->
 
                 <div class="form-group">
                     <div class="row">
-
                         <div class="col-12">
                             <label class="profile-label" for="profile-district">
                                 District
                             </label>
                         </div>
-
                         <div class="col-12">
+
+                            <!-- District dropdown values. -->
 
                             <select class="form-control" name="district" id="profileSelect">
                                 <option value="Mitte">Mitte</option>
@@ -86,239 +85,218 @@
 
                             </select>
                         </div>
-
-
-
                     </div>
                 </div>
-        </div>
 
-        <div class="jumbotron profile-jumbo">
-            <div class="form-group">
+                <!-- End header jumbotron. -->
+            </div>
+
+            <!-- Begin body jumbotron. -->
+
+            <div class="jumbotron profile-jumbo">
+                <div class="form-group">
+
+                    <!-- Body image. -->
+
+                    <div class="col-12 justify-content-center">
+                        <img class="profile-parts" src="/static/img/body.png" />
+                    </div>
+
+                    <!-- My Skills section -->
+
+                    <div class="col-12">
+                        <label class="profile-label" for="profile-skills">
+                            My skills
+                        </label>
+                    </div>
+
+                    <!-- The Tabs -->
+
+                    <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+                    <div class="row">
+                        <nav>
+                            <ul class="nav nav-tabs">
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab"
+                                        role="tab" aria-controls="skills"><i class="fas fa-share-alt"></i> I'm
+                                        proficient
+                                        in...</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab"
+                                        id="desiredSkills-tab" role="tab" aria-controls="desiredSkills"><i
+                                            class="fas fa-search"></i> Looking
+                                        for...</a>
+                                </li>
+
+                            </ul>
+                        </nav>
+                    </div>
+                    <!-- Tab Contents -->
+
+                    <div class="row">
+
+                        <div class="tab-content">
+                            <!-- Begin "I'm proficient in..." Skills Tab -->
+                            <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
+                                aria-labelledby="skills-tab">
+                                <div class="skill-column">
+                                    <div class="col-12">
+                                        {% for skill in skills %}
 
 
-
-                <div class="col-12 justify-content-center">
-
-                    <img class="profile-parts" src="/static/img/body.png" />
-
-                </div>
-
-                <!-- MY SKILLS SECTION -->
-
-                <div class="col-12">
-                    <label class="profile-label" for="profile-skills">
-                        My skills
-                    </label>
-                </div>
-
-                <!-- The Tabs -->
-
-                <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
-                <div class="row">
-                    <nav>
-                        <ul class="nav nav-tabs">
-
-                            <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab"
-                                    role="tab" aria-controls="skills"><i class="fas fa-share-alt"></i> I'm
-                                    proficient
-                                    in...</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab"
-                                    role="tab" aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
-                                    for...</a>
-                            </li>
-
-                        </ul>
-                    </nav>
-                </div>
-                <!-- Tab Contents -->
-
-                <div class="row">
-
-                    <div class="tab-content">
-
-
-
-                        <!-- Begin "I'm proficient in..." Skills Tab -->
-                        <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
-                            aria-labelledby="skills-tab">
-                            <div class="skill-column">
-                                <div class="col-12">
-                                    {% for skill in skills %}
-
-
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}"
-                                            id="skill-box">
-                                        <label class="form-check-label" for="skill-box">
-                                            {{skill}}
-                                        </label>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" name="skills"
+                                                value="{{skill}}" id="skill-box">
+                                            <label class="form-check-label" for="skill-box">
+                                                {{skill}}
+                                            </label>
+                                        </div>
+                                        {% endfor %}
                                     </div>
-
-
-                                    {% endfor %}
                                 </div>
-
+                                <!-- End "I'm proficient in..." Skills Tab -->
                             </div>
 
-                            <!-- End "I'm proficient in..." Skills Tab -->
-                        </div>
+                            <!-- Begin "Looking for..." desired skills tab -->
 
-
-                        <!-- Begin "Looking for..." desired skills tab -->
-
-
-                        <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
-                            aria-labelledby="desiredSkills-tab">
-
-                            <div class="skill-column">
-
-                                <div class="col-12">
-                                    {% for skill in skills %}
-
-
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="desiredSkills"
-                                            value="{{skill}}" id="skill-box">
-                                        <label class="form-check-label" for="skill-box">
-                                            {{skill}}
-                                        </label>
+                            <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
+                                aria-labelledby="desiredSkills-tab">
+                                <div class="skill-column">
+                                    <div class="col-12">
+                                        {% for skill in skills %}
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" name="desiredSkills"
+                                                value="{{skill}}" id="skill-box">
+                                            <label class="form-check-label" for="skill-box">
+                                                {{skill}}
+                                            </label>
+                                        </div>
+                                        {% endfor %}
                                     </div>
-
-
-                                    {% endfor %}
                                 </div>
-
-
+                                <!-- End "Looking for..." desired skills tab -->
                             </div>
-                            <!-- End "Looking for..." desired skills tab -->
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Description Field -->
+
+                <div class="row">
+
+                    <div class="col-12">
+                        <label class="profile-label" for="profile-description">
+                            Full Description
+                        </label>
+                        <textarea class="form-control" id="profile-description" name="description" rows="3"
+                            maxlength="500" rows="3"
+                            placeholder="Tell us about yourself! The more details you provide, the higher the chance that someone suitable will find you."></textarea>
+                    </div>
+                </div>
+
+                <!-- Communication style checkboxes -->
+
+                <div class="row">
+
+
+                    <div class="col-6">
+                        <label class="profile-label" for="profile-commstyle">
+                            Communication Style
+                        </label>
+
+
+                        {% for commstyle in commstyles %}
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="communicationStyle"
+                                value="{{commstyle}}" id="comm-box">
+                            <label class="form-check-label" for="comm-box">
+                                {{commstyle}}
+                            </label>
+                        </div>
+                        {% endfor %}
+                    </div>
+
+                    <!-- Other Fields -->
+
+                    <div class="col-6">
+                        <label class="profile-label" for="profile-other">
+                            Other
+                        </label>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="other" value="lookingforCoFounder"
+                                id="other-box">
+                            <label class="form-check-label" for="other-box">
+                                Looking for Co-Founder
+                            </label>
                         </div>
 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="other" value="availableForProjects"
+                                id="other-box">
+                            <label class="form-check-label" for="other-box">
+                                Available for Projects
+                            </label>
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="other" value="availableForHire"
+                                id="other-box">
+                            <label class="form-check-label" for="other-box">
+                                Available for Hire
+                            </label>
+                        </div>
 
                     </div>
 
+
+                </div>
+
+                <!-- End body jumbotron -->
+
+            </div>
+
+            <!-- Begin footer jumbotron. -->
+
+            <div class="jumbotron profile-jumbo">
+
+                <div class="row">
+
+                    <!-- Footer image. -->
+
+                    <div class="col-12">
+                        <img class="profile-parts" src="/static/img/footer.png" />
+                    </div>
+
+                    <!-- Github field. -->
+
+                    <div class="col-12">
+                        <label class="contact" for="profile-contact">
+                            Github
+                        </label>
+                        <input id="github" class="form-control" type="text" name="github" maxlength="50"
+                            placeholder="http://github.com/mycodestuffz">
+                    </div>
                 </div>
             </div>
 
-            <!-- DESCRIPTION SECTION -->
+            <!-- Save Changes button. -->
 
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="col-12">
-                    <label class="profile-label" for="profile-description">
-                        Full Description
-                    </label>
-                    <textarea class="form-control" id="profile-description" name="description" rows="3" maxlength="500"
-                        rows="3"
-                        placeholder="Tell us about yourself! The more details you provide, the higher the chance that someone suitable will find you."></textarea>
-                </div>
-            </div>
-
-            <!-- COMMUNICATION STYLE SECTION -->
-
-            <div class="row">
-
-
-                <div class="col-6">
-                    <label class="profile-label" for="profile-commstyle">
-                        Communication Style
-                    </label>
-
-
-                    {% for commstyle in commstyles %}
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}"
-                            id="comm-box">
-                        <label class="form-check-label" for="comm-box">
-                            {{commstyle}}
-                        </label>
-                    </div>
-                    {% endfor %}
-                </div>
-
-
-
-
-                <!-- OTHER SECTION -->
-
-                <div class="col-6">
-                    <label class="profile-label" for="profile-other">
-                        Other
-                    </label>
-
-
-
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="other" value="lookingforCoFounder"
-                            id="other-box">
-                        <label class="form-check-label" for="other-box">
-                            Looking for Co-Founder
-                        </label>
-                    </div>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="other" value="availableForProjects"
-                            id="other-box">
-                        <label class="form-check-label" for="other-box">
-                            Available for Projects
-                        </label>
-                    </div>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="other" value="availableForHire"
-                            id="other-box">
-                        <label class="form-check-label" for="other-box">
-                            Available for Hire
-                        </label>
-                    </div>
-
-                </div>
-
+                <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 ml-0 mb-5" name="btn"
+                    value="save">Save
+                    Changes</button>
 
             </div>
-        </div>
 
-        <div class="jumbotron profile-jumbo">
-
-
-            <div class="row">
-
-                <div class="col-12">
-                    <img class="profile-parts" src="/static/img/footer.png" />
-                </div>
-                <div class="col-12">
-
-
-
-                    <label class="contact" for="profile-contact">
-                        Github
-                    </label>
-                    <input id="github" class="form-control" type="text" name="github" maxlength="50"
-                        placeholder="http://github.com/mycodestuffz">
-                </div>
-
-            </div>
-        </div>
-
-        <div class="row justify-content-center">
-
-            <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 ml-0 mb-5" name="btn"
-                value="save">Save
-                Changes</button>
-
-        </div>
+            <!-- END FORM -->
 
         </form>
 
-
-
     </div>
-
-
 
     {% endblock %}
