Validate profile page html.

--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -42,7 +42,7 @@
                 <!-- Image URL field. -->
 
                 <div class="col-12 col-md-6">
-                    <label class="profile-label" for="profile-img">
+                    <label class="profile-label" for="imgURL">
                         Profile Image.
                     </label>
                     <small>Please enter the URL of your profile image</small>
@@ -218,7 +218,7 @@
 
             <div class="row">
                 <div class="col-6">
-                    <label class="profile-label" for="profile-commstyle">
+                    <label class="profile-label">
                         Communication Style
                     </label>
                     {% for commstyle in commstyles %}
@@ -247,7 +247,7 @@
                 <!-- Other Fields -->
 
                 <div class="col-6">
-                    <label class="profile-label" for="profile-other">
+                    <label class="profile-label">
                         Other
                     </label>
                     {% for other in other %}
@@ -291,7 +291,7 @@
                 </div>
 
                 <!-- Github field. -->
-                
+
                 <div class="col-12">
                     <label class="contact" for="profile-contact">
                         Github
