--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -31,7 +31,7 @@
 
                 <div class="row">
                     <div class="col-12 justify-content-center">
-                        <img class="profile-parts" src="/static/img/header.png" />
+                        <img class="profile-parts" alt="header-img" src="/static/img/header.png" />
                     </div>
                     <div class="col-12 col-md-6">
 
@@ -47,7 +47,7 @@
                     <!-- Image URL field. -->
 
                     <div class="col-12 col-md-6">
-                        <label class="profile-label" for="profile-img">
+                        <label class="profile-label" for="imgURL">
                             Profile Image.
                         </label>
                         <small>Please enter the URL of your profile image</small>
@@ -61,7 +61,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-12">
-                            <label class="profile-label" for="profile-district">
+                            <label class="profile-label" for="profileSelect">
                                 District
                             </label>
                         </div>
@@ -99,13 +99,13 @@
                     <!-- Body image. -->
 
                     <div class="col-12 justify-content-center">
-                        <img class="profile-parts" src="/static/img/body.png" />
+                        <img class="profile-parts" alt="body-img" src="/static/img/body.png" />
                     </div>
 
                     <!-- My Skills section -->
 
                     <div class="col-12">
-                        <label class="profile-label" for="profile-skills">
+                        <label class="profile-label">
                             My skills
                         </label>
                     </div>
@@ -202,7 +202,7 @@
 
 
                     <div class="col-6">
-                        <label class="profile-label" for="profile-commstyle">
+                        <label class="profile-label">
                             Communication Style
                         </label>
 
@@ -222,7 +222,7 @@
                     <!-- Other Fields -->
 
                     <div class="col-6">
-                        <label class="profile-label" for="profile-other">
+                        <label class="profile-label" for="other-box">
                             Other
                         </label>
 
@@ -268,13 +268,13 @@
                     <!-- Footer image. -->
 
                     <div class="col-12">
-                        <img class="profile-parts" src="/static/img/footer.png" />
+                        <img class="profile-parts" alt="footer-img" src="/static/img/footer.png" />
                     </div>
 
                     <!-- Github field. -->
 
                     <div class="col-12">
-                        <label class="contact" for="profile-contact">
+                        <label class="contact">
                             Github
                         </label>
                         <input id="github" class="form-control" type="text" name="github" maxlength="50"
