--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -61,7 +61,7 @@
 
                 <div class="col-12 justify-content-center">
 
-                    <img class="profile-parts" src="/static/img/header.png" />
+                    <img class="profile-parts" alt="header-img" src="/static/img/header.png" />
                 </div>
                 <div class="col-12 col-md-6">
 
@@ -78,7 +78,7 @@
 
                 <div class="col-12 col-md-6">
 
-                    <label class="profile-label" for="profile-img">
+                    <label class="profile-label" for="profileImg">
                         Profile Image.
                     </label>
                     <small>Please enter the URL of your profile image</small>
@@ -94,7 +94,7 @@
                 <div class="row">
 
                     <div class="col-12">
-                        <label class="profile-label" for="profile-district">
+                        <label class="profile-label" for="profileSelect">
                             District
                         </label>
                     </div>
@@ -124,8 +124,7 @@
                 <div class="col-12 justify-content-center">
 
                     <h3 class="profile-heading">
-                        <img class="profile-parts" src="/static/img/body.png" />
-                        </header>
+                        <img class="profile-parts" alt="body-img" src="/static/img/body.png" />
                     </h3>
 
                 </div>
@@ -133,7 +132,7 @@
                 <!-- My Skills section -->
 
                 <div class="col-12">
-                    <label class="profile-label" for="profile-skills">
+                    <label class="profile-label">
                         My skills
                     </label>
                 </div>
@@ -144,8 +143,6 @@
                 <div class="row">
                     <nav>
                         <ul class="nav nav-tabs ml-2">
-
-
                             <li class="nav-item">
                                 <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab"
                                     role="tab" aria-controls="skills"><i class="fas fa-share-alt"></i> I'm
@@ -213,7 +210,7 @@
                             Full Description
                         </label>
                         <input class="form-control" type="textarea" id="profile-description" name="description" rows="3"
-                            maxlength="500" rows="3" value="{{username.description}}" readonly></input>
+                            maxlength="500" value="{{username.description}}" readonly>
                     </div>
                 </div>
 
@@ -221,7 +218,7 @@
 
                 <div class="row">
                     <div class="col-6">
-                        <label class="profile-label" for="profile-commstyle">
+                        <label class="profile-label">
                             Communication Style
                         </label>
                         {% for comm in commstyles %}
@@ -242,7 +239,7 @@
                     <!-- Other Fields -->
 
                     <div class="col-6">
-                        <label class="profile-label" for="profile-other">
+                        <label class="profile-label">
                             Other
                         </label>
 
@@ -285,7 +282,6 @@
                         {% endfor %}
                     </div>
 
-
                 </div>
             </div>
 
@@ -303,18 +299,17 @@
 
                 <div class="col-12">
                     <h3 class="profile-heading justify-content-center">
-                        <img class="profile-parts" src="/static/img/footer.png" />
+                        <img class="profile-parts" alt="footer-img" src="/static/img/footer.png" />
 
                     </h3>
                 </div>
-
             </div>
 
             <div class="col-12">
 
                 <!-- Github field. -->
 
-                <label class="contact" for="profile-contact">
+                <label class="contact">
                     Github
                 </label>
                 <input id="github" class="form-control" type="text" name="github" maxlength="50"
