--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -31,7 +31,7 @@ padding: 0.3rem !important;
 
 .profile-heading {
     font-size: 1.6rem;
-    font-family: 700;
+    font-weight: 700;
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     margin-bottom: 5vh;
