--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -24,7 +24,7 @@
     }
 
     @media (min-width: $bp-desktop) {
-        height: 240vh;
+        height: 200vh;
     }
 
 }
@@ -43,6 +43,10 @@
     @media (min-width: $bp-mobile) {
         width: 800px !important;
         margin-left: 0;
+    }
+
+    @media (min-width: $bp-desktop) {
+        width: 30% !important;
     }
 
     @media screen and (orientation: landscape) {
@@ -284,7 +288,11 @@ ul ul a {
     margin: 4rem;
     width: 70vw;
 
-    @media screen and (orientation: landscape) {
+    @media (min-width: $bp-desktop) {
+        margin: 8rem;
+    }
+
+    @media (max-width: $bp-ipadpro) and (orientation: landscape) {
         margin-left: 1rem !important;
     }
 }
