--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -205,12 +205,16 @@ margin: 1rem;
 }
 
 .footer-col > h6 {
-    @media screen and (orientation: landscape) {
+    @media (orientation: landscape) {
         font-size: 0.8em !important;
     }
 
     @media (max-width: $bp-mini) {
         font-size: 0.8em !important;
+    }
+
+    @media (min-width: $bp-desktop) {
+        font-size: 1.5rem !important;
     }
 }
 
