--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -161,7 +161,7 @@
 
 .card {
     display: inline-block;
-    width: 50vh;
+    // width: 50vh;
     height: auto;
     margin-left: 2rem;
     max-width: 80%;
